Fix buttons overflowing screen

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -23,3 +23,14 @@ main {
     /*line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+.topbutton {
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .topbutton {
+        width: auto;
+    }
+}
+
